llow reuse of Datastores from the GeoServer Catalog on 2.0.x
git-svn-id: http://svn.codehaus.org/geoserver/branches/2.0.x@14307 ef1d6e69-97e5-0310-af46-8a06194da32a

Former-commit-id: c9480f0fe3338b7dc85dfdd52766c38055d030f9 [formerly 0a64d4fe3520c1967adada0578172040ba859e71]
Former-commit-id: 15516bee9ca68c77b0d9676e4472773068b52b81